@@ -16,5 +16,8 @@ license = Perl_5
 ; Verbatim tests have trailing whitespace (in pod and and heredocs).
 Test::EOL.trailing_whitespace = 0
 
+[Prereqs / RuntimeRecommends]
+HTML::Entities = 0
+
 [Prereqs / DevelopRecommends]
 IO::Scalar = 0
